# OpenQC-VSCode

./: .eslintrc.json  .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PLAN.md.backup  PR_REVIEW.md  README.md  TASK-MANAGEMENT.md  TDD-GUIDELINES.md  debug_test.js  jest.config.js  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/PROJECTS/: board-config.yml
.github/workflows/: pre-commit.yml  release.yml  test.yml
.maintenance/: last-run.md
ai-protocols/mcp-server/: server.py
core/: pyproject.toml
core/openqc/: __init__.py  cli.py  workflow.py
core/openqc/converters/: __init__.py  ase_converter.py  base.py  dpdata_converter.py
core/openqc/parsers/: __init__.py  base.py  gaussian.py  orca.py  qe.py  vasp.py
core/openqc/utils/: __init__.py  chemistry.py
core/openqc/visualizers/: __init__.py  structure_visualizer.py
docs/: ASE_INTEGRATION.md  DEVELOPER.md  FAQ.md  ISSUE-2-COMPLETION-SUMMARY.md  MARKETPLACE-PUBLISHING.md  USER-ACTION-GUIDE.md  phase2-progress.md
docs/api/: API.md
docs/architecture/: ARCHITECTURE.md
examples/: README.md
examples/cp2k/: ch4_opt.inp  h2o_sp.inp  si_bulk.inp
examples/gamess/: benzene_opt.inp  formaldehyde_tddft.inp  h2o_scf.inp
examples/gaussian/: benzene_sp.com  h2o_opt.com  ts_search.com  water_opt.com
examples/nwchem/: benzene_dft.nw  h2o_scf.nw  si_bulk.nw
examples/orca/: benzene_pcm.inp  h2o_ccsdt.inp  h2o_opt.inp  phenol_opt.inp
examples/qe/: h2o_vc_relax.in  si_bands.in  si_bands.pw  si_scf.in
examples/structures/: H2O_POSCAR
examples/vasp/: INCAR-MD  INCAR-Si  KPOINTS-Si  POSCAR-Si2
language-configurations/: gaussian.json
python/: requirements.txt
python/tests/: test_ase_converter.py
screenshots/: README.md
scripts/: update-lsp-list.sh
server/: __init__.py  file_transfer.py  slurm_interface.py  ssh_handler.py
src/: extension.ts
src/ai/: AICore.ts  aiCommands.ts  index.ts
src/ase/: ASECalculator.ts  ASEConverter.ts  ComplexPropertyMapper.ts  calculatorCommands.ts  commands.ts  index.ts
src/commands/: exportCommands.ts  migrationCommands.ts
src/managers/: FileTypeDetector.ts  LSPManager.ts
src/parsers/: CP2KParser.ts  VASPParser.ts
src/sidebar/: index.ts  (+3 more)
syntaxes/: cp2k.tmLanguage.json  gamess.tmLanguage.json  gaussian.tmLanguage.json  nwchem.tmLanguage.json  orca.tmLanguage.json  qe.tmLanguage.json  vasp.tmLanguage.json
tests/: README.md  test_workflow_migration.py
vscode-extension/: package.json
(+106 files in other folders)
